@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2008-2017 by Walter Brisken & Chris Phillips            *
+ *   Copyright (C) 2008-2018 by Walter Brisken & Chris Phillips            *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -46,8 +46,8 @@
 
 const char program[] = "m5spec";
 const char author[]  = "Walter Brisken, Chris Phillips";
-const char version[] = "1.4";
-const char verdate[] = "20170426";
+const char version[] = "1.5";
+const char verdate[] = "20180914";
 
 volatile int die = 0;
 
@@ -83,6 +83,7 @@ static void usage(const char *pgm)
 	printf("  <offset> is number of bytes into file to start decoding\n\n");
 	printf("\n");
 	printf("The following options are supported\n\n");
+	printf("    -version   Print version info and quit\n\n");
 	printf("    -dbbc      Assume dBBC polarisation order (all Rcp then all Lcp)\n\n");
 	printf("    -nopol     Do not compute cross pol terms\n\n");
 	printf("    -double    Double sideband (complex) data\n\n");
@@ -442,6 +443,7 @@ int main(int argc, char **argv)
 	int opt;
 	struct sigaction new_sigint_action;
 	struct option options[] = {
+		{"version", 0, 0, 'V'}, // Version
 		{"double", 0, 0, 'd'}, // Double sideband complex
 		{"dbbc", 0, 0, 'B'},  // dBBC channel ordering
 		{"nopol", 0, 0, 'P'}, // Don't compute the crosspol terms
@@ -468,10 +470,13 @@ int main(int argc, char **argv)
 			printf("Assuming double sideband data\n");
 			break;
 
+		case 'V': // Version
+			printf("%s ver. %s   %s  %s\n\n", program, version, author, verdate);
+			return EXIT_SUCCESS;
+
 		case 'h': // help
 			usage(argv[0]);
 			return EXIT_SUCCESS;
-			break;
 		}
 	}
 
